--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -123,6 +123,10 @@ const { data } = Astro.props;
     }
   }
 
+  .text-medium {
+    line-height: 1.45;
+  }
+
   .card-item {
     border-radius: var(--radius);
     overflow: hidden;
@@ -197,6 +201,6 @@ const { data } = Astro.props;
 
     display: flex;
     flex-direction: column;
-    gap: calc(var(--unit) * 0.5);
+    gap: calc(var(--unit) * 0.25);
   }
 </style>
