--- a/src/components/List.astro
+++ b/src/components/List.astro
@@ -53,16 +53,16 @@ const formatDate = (string) => {
 
   .list-item:not(:last-child) .list-article {
     padding-bottom: calc(var(--unit) * 2);
-
-    @media screen and (min-width: 800px) {
-      padding-bottom: calc(var(--unit) * 3);
-    }
   }
 
   .list-article {
     display: flex;
     flex-direction: column;
-    gap: calc(var(--unit) * 0.5);
+    gap: calc(var(--unit) * 0.25);
+  }
+
+  .text-medium {
+    line-height: 1.45;
   }
 
   /**
@@ -99,7 +99,7 @@ const formatDate = (string) => {
     }
 
     .list__horizontal {
-      --height: calc(var(--unit) * 8.4);
+      --height: calc(var(--unit) * 8.8);
       --y: 0;
 
       .list-item {
@@ -117,7 +117,7 @@ const formatDate = (string) => {
             // times of card's height + times of card's padding - padding;
             --y: calc(
               (var(--height) * (#{$i} - 1)) +
-                (var(--unit) * 3 * (#{$i} - 1)) -
+                (var(--unit) * 2 * (#{$i} - 1)) -
                 (var(--unit) * 2 * (#{$i} - 1))
             );
           }
