--- a/src/styles/_typography.css
+++ b/src/styles/_typography.css
@@ -1,3 +1,12 @@
+html,
+body {
+  font-size: 16px;
+  color: var(--color-0);
+  line-height: 1.75;
+  font-family: var(--sans-serif);
+  font-weight: normal;
+}
+
 .text-highlight {
   background: none;
   cursor: pointer;
