--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -33,7 +33,7 @@
             <span class="text-medium color-0"
               >I&#39;m obsessed with the problem.</span
             > I like engaging in activities that require me to dive deep into the
-            uncertainty, from small details to big issues.
+            uncertainty, from small details to big problems.
           </p>
         </li>
         <li>
