--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -102,7 +102,9 @@
     padding-bottom: var(--body-gap);
     position: relative;
 
-    text-wrap: balance;
+    @media screen and (min-width: 768px) {
+      text-wrap: balance;
+    }
   }
 
   article {
