fix: typography improvements

--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -8,50 +8,6 @@ const { data } = Astro.props;
       const external = /https/.test(item.frontmatter.link);
       const github = /github/.test(item.frontmatter.link);
 
-      const renderCallToAction = () => {
-        if (external || github)
-          return (
-            <>
-              <span>{github ? "Go to GitHub" : "Access"}</span>
-              <svg
-                width="13"
-                height="13"
-                viewBox="0 0 15 15"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M3 2C2.44772 2 2 2.44772 2 3V12C2 12.5523 2.44772 13 3 13H12C12.5523 13 13 12.5523 13 12V8.5C13 8.22386 12.7761 8 12.5 8C12.2239 8 12 8.22386 12 8.5V12H3V3L6.5 3C6.77614 3 7 2.77614 7 2.5C7 2.22386 6.77614 2 6.5 2H3ZM12.8536 2.14645C12.9015 2.19439 12.9377 2.24964 12.9621 2.30861C12.9861 2.36669 12.9996 2.4303 13 2.497L13 2.5V2.50049V5.5C13 5.77614 12.7761 6 12.5 6C12.2239 6 12 5.77614 12 5.5V3.70711L6.85355 8.85355C6.65829 9.04882 6.34171 9.04882 6.14645 8.85355C5.95118 8.65829 5.95118 8.34171 6.14645 8.14645L11.2929 3H9.5C9.22386 3 9 2.77614 9 2.5C9 2.22386 9.22386 2 9.5 2H12.4999H12.5C12.5678 2 12.6324 2.01349 12.6914 2.03794C12.7504 2.06234 12.8056 2.09851 12.8536 2.14645Z"
-                  fill="currentColor"
-                  fill-rule="evenodd"
-                  clip-rule="evenodd"
-                />
-              </svg>
-            </>
-          );
-
-        return (
-          <>
-            <span>Read more</span>
-
-            <svg
-              width="15"
-              height="15"
-              viewBox="0 0 15 15"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M6.1584 3.13508C6.35985 2.94621 6.67627 2.95642 6.86514 3.15788L10.6151 7.15788C10.7954 7.3502 10.7954 7.64949 10.6151 7.84182L6.86514 11.8418C6.67627 12.0433 6.35985 12.0535 6.1584 11.8646C5.95694 11.6757 5.94673 11.3593 6.1356 11.1579L9.565 7.49985L6.1356 3.84182C5.94673 3.64036 5.95694 3.32394 6.1584 3.13508Z"
-                fill="currentColor"
-                fill-rule="evenodd"
-                clip-rule="evenodd"
-              />
-            </svg>
-          </>
-        );
-      };
-
       return (
         <li class="card-item">
           <a
@@ -71,7 +27,24 @@ const { data } = Astro.props;
                 </h1>
                 <p class="color-1">{item.frontmatter.tagline}</p>
 
-                <p class="text-highlight text-small">{renderCallToAction()}</p>
+                <p class="text-highlight text-small">
+                  <span>{github || external ? "Access" : "Read more"}</span>
+
+                  <svg
+                    width="15"
+                    height="15"
+                    viewBox="0 0 15 15"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M6.1584 3.13508C6.35985 2.94621 6.67627 2.95642 6.86514 3.15788L10.6151 7.15788C10.7954 7.3502 10.7954 7.64949 10.6151 7.84182L6.86514 11.8418C6.67627 12.0433 6.35985 12.0535 6.1584 11.8646C5.95694 11.6757 5.94673 11.3593 6.1356 11.1579L9.565 7.49985L6.1356 3.84182C5.94673 3.64036 5.95694 3.32394 6.1584 3.13508Z"
+                      fill="currentColor"
+                      fill-rule="evenodd"
+                      clip-rule="evenodd"
+                    />
+                  </svg>
+                </p>
               </div>
             </article>
           </a>
@@ -103,8 +76,13 @@ const { data } = Astro.props;
   .card-item {
     border-radius: var(--radius);
     overflow: hidden;
-    border: 1px solid var(--color-3);
     transition: border var(--transition);
+
+    box-shadow: var(--shadow);
+
+    &:active {
+      background: var(--color-4);
+    }
 
     * {
       display: block;
@@ -126,7 +104,8 @@ const { data } = Astro.props;
 
     display: flex;
     flex-direction: column;
-    gap: calc(var(--unit) * 0.25);
+    gap: calc(var(--unit) * 0.5);
+    line-height: 1.45;
   }
 
   .card-figure {
