--- a/src/styles/_vars.css
+++ b/src/styles/_vars.css
@@ -23,6 +23,10 @@
   /* Misc */
   --transition: 0.2s ease;
   --radius: calc(var(--unit) * 0.5);
+
+  --shadow: rgba(232, 232, 232, 0.7) 0px 1px 5px -4px,
+    rgba(10, 50, 70, 0.08) 0px 0px 0px 1px,
+    rgba(10, 50, 70, 0.05) 0px 4px 8px 0px;
 }
 
 @media screen and (min-width: 800px) {
