--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -84,6 +84,7 @@
 <style lang="scss">
   .about_img {
     display: none;
+
     @media screen and (min-width: 800px) {
       display: block;
       grid-column: 1/2;
@@ -92,6 +93,8 @@
         width: 100%;
         margin-left: calc(-2 * var(--unit));
         border-radius: var(--radius);
+        box-shadow: rgba(232, 232, 232, 0.7) 0px 1px 5px -4px,
+          rgba(10, 50, 70, 0.05) 0px 4px 8px 0px;
       }
     }
   }
