--- a/src/components/MainHead.astro
+++ b/src/components/MainHead.astro
@@ -13,7 +13,7 @@ const canonical = new URL(Astro.url.pathname, Astro.site).href;
 <link rel="preconnect" href="https://fonts.googleapis.com" />
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 <link
-  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Merriweather&display=swap"
+  href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500&family=Nokora&display=swap"
   rel="stylesheet"
 />
 
