feat: new navigation

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Footer from "../components/Footer.astro";
 import MainHead from "../components/MainHead.astro";
 import List from "../components/List.astro";
 import UIGallery from "../components/UIGallery.astro";
+import Nav from "../components/Nav.astro";
 
 const blogsMd = await Astro.glob("./blog/*.md");
 const contentMd = await Astro.glob("../content/*.md");
@@ -37,6 +38,8 @@ const articles = content.filter(
   <body>
     <main class="container grid">
       <Hero />
+
+      <Nav />
 
       <Section title="Writing">
         <List data={articles} />
