--- a/src/styles/_vars.css
+++ b/src/styles/_vars.css
@@ -27,6 +27,46 @@
   --shadow: rgba(232, 232, 232, 0.7) 0px 1px 5px -4px,
     rgba(10, 50, 70, 0.08) 0px 0px 0px 1px,
     rgba(10, 50, 70, 0.05) 0px 4px 8px 0px;
+
+  --spring-easing-bounce: linear(
+    0,
+    0.0053 1.01%,
+    0.0309 2.53%,
+    0.2173 7.58%,
+    0.6308 16.17%,
+    1.032 31.33%,
+    1.06 35.37%,
+    1.0585 45.48%,
+    1.0274 55.08%,
+    1.016,
+    1.0073,
+    1.0013 67.2%,
+    0.997 72.26%,
+    0.9954 77.81%,
+    0.999 99.54%
+  );
+
+  --spring-easing-smooth: linear(
+    0,
+    0.0052 1.01%,
+    0.0299 2.53%,
+    0.1033 5.05%,
+    0.5356 15.66%,
+    0.6424 18.7%,
+    0.7188,
+    0.7836 23.75%,
+    0.8467,
+    0.8957 29.81%,
+    0.9375,
+    0.9663,
+    0.9852 40.42%,
+    0.9981 44.46%,
+    1.0051 49.01%,
+    1.0073 52.55%,
+    1.0076 57.1%,
+    1.0017 79.33%,
+    1 99.54%
+  );
 }
 
 @media screen and (min-width: 800px) {
