--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -103,7 +103,7 @@ const { data } = Astro.props;
   }
 
   .card-content {
-    padding: calc(var(--unit) * 1);
+    padding: calc(var(--unit) * 1) calc(var(--unit) * 1.3);
     text-wrap: balance;
 
     display: flex;
@@ -113,13 +113,16 @@ const { data } = Astro.props;
   }
 
   .card-figure {
-    width: 100%;
+    --padding: calc(var(--unit) * 0.5);
+    width: calc(100% - var(--padding) * 2);
     aspect-ratio: 1.6;
     position: relative;
     border-top-left-radius: var(--radius);
     border-top-right-radius: var(--radius);
+    margin: var(--padding);
 
     img {
+      border-radius: calc(var(--radius) - var(--padding) * 0.4);
       position: absolute;
       inset: 0;
       width: 100%;
