--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -58,7 +58,7 @@
   }
 
   .text-large {
-    position: sticky;
+    position: sticky !important;
     top: calc(var(--unit) * 2);
     margin-bottom: calc(var(--unit) * 2);
     display: flex;
