--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -45,7 +45,7 @@ const articles = content.filter(
         <List data={articles} />
       </Section>
 
-      <Section title="UI garden">
+      <Section title="UI Garden">
         <UIGallery />
       </Section>
 
