--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -49,6 +49,7 @@
     grid-column: 1/2;
     grid-row: 2 / 10;
     margin-top: calc(var(--unit) * -0.5);
+    margin-left: calc(var(--unit) * -2);
 
     display: none;
 
