--- a/src/components/Cards.astro
+++ b/src/components/Cards.astro
@@ -17,7 +17,16 @@ const { data } = Astro.props;
             <article>
               {item.frontmatter.image && (
                 <div class="card-figure">
-                  <img src={item.frontmatter.image} />
+                  <div class="card-figure_header">
+                    <span class="button">
+                      <span />
+                      <span />
+                      <span />
+                    </span>
+                  </div>
+                  <div class="card-figure_holder">
+                    <img src={item.frontmatter.image} />
+                  </div>
                 </div>
               )}
               <div class="card-content">
@@ -113,23 +122,78 @@ const { data } = Astro.props;
   }
 
   .card-figure {
-    --padding: calc(var(--unit) * 0.5);
+    --padding: calc(var(--unit) * 0.7);
+    --card-radius: calc(var(--radius) - var(--padding) * 0.3);
+    --shadow: hsla(var(--hue), var(--saturation), 91%, 0.7) 0px 1px 5px -4px,
+      hsla(255, 75%, 16%, 0.1) 0px 4px 8px 0px;
+
     width: calc(100% - var(--padding) * 2);
-    aspect-ratio: 1.6;
-    position: relative;
     margin: var(--padding);
+    box-shadow: var(--shadow);
+    border-radius: var(--card-radius);
+    position: relative;
 
     &:after {
       content: "";
       display: block;
       position: absolute;
-      inset: -1px;
-      border-radius: calc(var(--radius) - var(--padding) * 0.4);
-      box-shadow: inset 0 0 0 1px var(--color-3);
+      inset: 0;
+      border: 1px solid hsla(255, 75%, 16%, 0.1);
+      z-index: 99;
+      border-radius: var(--card-radius);
+    }
+  }
+
+  .card-figure_header {
+    background: hsla(var(--hue), var(--saturation), 10%, 0.04);
+    height: var(--padding);
+    width: 100%;
+    position: relative;
+
+    border-top-left-radius: var(--card-radius);
+    border-top-right-radius: var(--card-radius);
+
+    .button {
+      display: flex;
+      gap: 3px;
+      align-items: center;
+      position: absolute;
+      left: 6px;
+      top: 3px;
+      bottom: 2px;
+
+      span {
+        width: 3px;
+        height: 3px;
+        display: block;
+        background: hsla(var(--hue), var(--saturation), 10%, 0.2);
+        border-radius: 9999px;
+      }
     }
 
+    &:after {
+      content: "";
+      display: block;
+      position: absolute;
+      border-radius: 999px;
+      background: hsla(var(--hue), var(--saturation), 10%, 0.06);
+
+      top: 3px;
+      bottom: 3px;
+      left: 28px;
+      right: 3px;
+    }
+  }
+
+  .card-figure_holder {
+    aspect-ratio: 1.6;
+
+    position: relative;
+    overflow: hidden;
+    border-bottom-left-radius: var(--card-radius);
+    border-bottom-right-radius: var(--card-radius);
+
     img {
-      border-radius: calc(var(--radius) - var(--padding) * 0.4);
       position: absolute;
       inset: 0;
       width: 100%;
