--- a/src/components/UIGallery.astro
+++ b/src/components/UIGallery.astro
@@ -20,6 +20,14 @@ import "../styles/sandbox.css";
 
   <Sandbox
     client:only="react"
+    sandboxId="n57fpk"
+    title="Filter Spotify menu"
+    description="SVG for the merging effect, and Framer Motion to animate transition."
+    showRefreshButton
+  />
+
+  <Sandbox
+    client:only="react"
     sandboxId="n9g694"
     title="CSS only album navigation"
     description="Reproduction of 'Apple Music: 100 best albums' website but using only CSS."
