--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,3 +1,7 @@
+---
+import AboutTimeZone from "./AboutTimeZone.astro"
+---
+
 <section class="section grid" id="about-me">
   <div class="about_img">
     <img src="/images/cover.jpg" />
@@ -8,7 +12,7 @@
     <div class="text-content color-1">
       <p class="text-base">
         <span class="text-medium color-0">
-          A Brazilian living in Porto, Portugal.
+          A Brazilian living in <AboutTimeZone />
         </span>
         I'm a front-end developer with a design background and more than ten years
         of experience creating digital products. Over the past few years, I've been
