--- a/src/components/AboutTimeZone.astro
+++ b/src/components/AboutTimeZone.astro
@@ -1,14 +1,14 @@
-<span class="tooltip">Porto, Portugal.</span>
+<span class="tooltip" id="utm">Porto, Portugal.</span>
 
 <script>
-  document.addEventListener('DOMContentLoaded', () => {
-    const tooltip = document.querySelector('.tooltip');
+  const tooltip = document.getElementById('utm');
 
+  setInterval(() => {
     tooltip.setAttribute('data-content', `UTC+1 - ${new Intl.DateTimeFormat('en-US', {
       timeZone: 'Europe/Lisbon',
       hour: 'numeric',
       minute: '2-digit',
       hour12: true
     }).format(new Date())}`)
-  });
+  }, 1000);
 </script>
